feat-06: Http patch to modify users data
